# swpp2021-team13

./: .gitignore  .travis.yml  README.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: new-feature.md
backend/probloom/: .gitignore  .pylintrc  Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/probloom/docs/source/: conf.py  index.rst  models.rst  views.rst
backend/probloom/prob/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
backend/probloom/prob/migrations/: 0001_initial.py  0002_alter_problemsetcomment_content.py  0002_auto_20211028_1635.py  0002_auto_20211108_1030.py  0002_auto_20211108_1043.py  0002_choice_problems.py  0002_rename_date_problemsetcomment_created_time.py  0002_userprofile.py  0003_auto_20211109_1938.py  0003_comment_problemset.py  0003_userstatistics.py  0004_alter_userstatistics_lastactivedays.py  0004_auto_20211108_2157.py  0004_problemset_type.py  0005_auto_20211109_1416.py  0005_rename_type_problemset_is_open.py  0006_alter_problemset_creator.py  0006_rename_date_problemset_created_time.py
backend/probloom/prob/test/: __init__.py  test_comment.py  test_problem_info.py  test_problem_set.py  test_problem_set_list.py  test_recommend.py  test_sign.py  test_solved.py  test_token.py  test_user_profile.py  test_user_statistics.py
backend/probloom/probloom/: asgi.py  settings.py  urls.py  wsgi.py
frontend/probloom/: .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/probloom/public/: index.html
frontend/probloom/src/: App.test.tsx  App.tsx  index.tsx  mocks.tsx  setupTests.ts
(+79 files in other folders)
