[tool.coverage.run]
branch = true
command_line = "manage.py test"
source = ["prob/"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poetry]
name = "probloom-backend"
version = "0.1.0"
description = ""
authors = [
  "JeonHyeong Lee",
  "Jonghyon Kim",
  "Myeongseop Jeon",
  "Sangwon Beak",
]
packages = [
  { include = "prob" },
  { include = "probloom" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
django-polymorphic = "^3.1.0"

uWSGI = { version = "^2.0.20", optional = true }
ipython = { version = "^7.29.0", optional = true }
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
pylint-django = "^2.4.4"
black = "^21.11b1"
isort = "^5.10.1"
coverage = "^6.1.2"
Sphinx = "^4.3.0"

[tool.poetry.extras]
deploy = ["uWSGI"]
ipython = ["ipython"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
